navbar and logout added

--- a/views/Customer/customerHomepage.ejs
+++ b/views/Customer/customerHomepage.ejs
@@ -45,7 +45,25 @@
 	<!-- Navigator -->
 
 	<!-- Container -->
-	<div class="container">
+	<div class="container-full">
+		<div id="top-navbar" class="navbar navbar-default navbar-top">
+			<div class="container">
+				<ul class="nav navbar-nav">
+				
+					<li class="active"><a href="#">Home</a></li>
+					<li><a  href="/">Account</a></li>
+					<li><a  href="/">Abc</a></li>
+					<li><a  href="/">Def</a></li>
+					<li><a href="#"><span class="glyphicon glyphicon-search"
+							aria-hidden="true"></span></a></li>
+				</ul>
+							<ul class="nav navbar-nav navbar-right">
+      				<li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
+    						</ul>
+				
+				
+			</div>
+		</div>
 		<form action="/search" method="POST">
 			<!-- Time-based Welcome Message -->
 			<div align="center">
