--- a/views/Customer/addBill.ejs
+++ b/views/Customer/addBill.ejs
@@ -220,7 +220,7 @@ function googleTranslateElementInit() {
 <%=text%>
 </textarea><br>  --> </div>  
 <div class="col-sm-6"><div id="cloud"></div></div>	
-<button onclick="generateCloud()" style="color: white; padding: 16px 33px; text-align: center;  margin: 5px; margin-left: 66px; background-color: green; display: inline-block;font-size: 15px;" >Generate Word Cloud And Word Tree</button>		
+<button onclick="generateCloud()" style="color: white; padding: 16px 33px; text-align: center;  margin: 5px; margin-left: 66px; background-color: green; display: inline-block;font-size: 15px;" >Generate Word Cloud</button>		
 			<div align="center">
 				<h1>Add Bill</h1>
 					<div class="container-fluid" id="signupbox">
@@ -229,7 +229,7 @@ function googleTranslateElementInit() {
 			<div class="col-md-6">
 			<div class="span8">
 					
-					<form action="/postBillDetails" method="post" encType="multipart/form-data" >
+					<form action="/postBillDetails" method="post">
 						<input class="form-control" id="restaurentChoice" value='<%= abc %>' name="restaurentChoice" type="hidden">
 					<div class="form-group" >
 					<input type="file" name="sampleFile" id="sampleFile">
