--- a/views/Customer/start.ejs
+++ b/views/Customer/start.ejs
@@ -14,7 +14,7 @@
 <script
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-<meta name="keywords" content="food, hunger, hungry, food order, find food, find restaurant etc">
+<meta name="keywords" content="food, RestoAssistant, hunger, hungry, food order, find food, find restaurant etc">
 <meta name="robots" content="index, follow">
 <meta http-equiv="Cache-Control"
 	content="no-cache, no-store, must-revalidate" />
