--- a/views/Customer/start.ejs
+++ b/views/Customer/start.ejs
@@ -15,6 +15,8 @@
 	src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 <meta name="keywords" content="food, RestoAssistant, hunger, hungry, food order, find food, find restaurant etc">
+<meta name="description" content="Find good food and earn points for eating" />
+<meta name="googlebot" content="index, follow" />
 <meta name="robots" content="index, follow">
 <meta http-equiv="Cache-Control"
 	content="no-cache, no-store, must-revalidate" />
